--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <title>Graphic Designer</title>
-     <embed src="../mp3/%E8%96%9B%E4%B9%8B%E8%B0%A6%20-%20%E6%88%91%E5%AE%B3%E6%80%95.mp3" hidden="true" autostart="true" loop="true">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
      
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body id="homepage">
+   <audio controls autoplay loop>
+       <source src="mp3/%E5%B0%8F%E6%97%B6%20-%20%E6%9C%9B.mp3" type="audio/mpeg">
+   </audio>
     <div class="wrap">
         <header class="main-header">
             <h1 class="Logo"><a href="pictures/3.jpg"></a></h1>
@@ -31,7 +33,6 @@
 
 
         </section>
-
     </div>
     <footer>
         <div>xiaoxiao&copy;2018</div>
