--- a/pictures2.html
+++ b/pictures2.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Graphic Designer</title>
-    <embed src="../mp3/%E8%96%9B%E4%B9%8B%E8%B0%A6%20-%20%E6%9A%A7%E6%98%A7.mp3" hidden="true" autostart="true" loop="true">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="../css/normalize.css">
@@ -12,6 +12,9 @@
 </head>
 
 <body id="second_page">
+    <audio controls autoplay loop>
+       <source src="mp3/%E8%96%9B%E4%B9%8B%E8%B0%A6%20-%20%E6%9A%A7%E6%98%A7.mp3" type="audio/mpeg">
+   </audio>
     <div class="wrap">
         <header>
             <h1 class="Logo"><a href="pictures/3.jpg"></a></h1>
