--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    </audio>
     <div class="wrap">
         <header class="main-header">
-            <h1 class="Logo"><a href="pictures/3.jpg"></a></h1>
+            <h1 class="Logo"><a href="pictures/1.jpg"></a></h1>
             <ul class="navlist">
-                <button id="anniu">View All Products</button>
+                <button id="anniu">隐藏列表</button>
                 <ul class="neirong">
                     
                                  <li><a href="pictures2.html">Second pictures</a></li>
