--- a/pictures2.html
+++ b/pictures2.html
@@ -6,8 +6,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/asd.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -17,7 +17,7 @@
    </audio>
     <div class="wrap">
         <header>
-            <h1 class="Logo"><a href="pictures/3.jpg"></a></h1>
+            <h1 class="Logo"><a href="pictures/2.jpg"></a></h1>
             <ul>
                 <ul>
                     <li><a href="index.html">Return to the previous page</a></li>
